Added edit icon and it's function

--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
       <li class="taskitem">
         <div class="circle"></div>
         <span>Go to gym</span>
+        <button class="editbutton"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
         <button class="thebtn"><i class="fa fa-trash" aria-hidden="true"></i></button>
       </li>
       <li class="taskitem">
         <div class="circle"></div>
         <span>Go to sch</span>
+        <button class="editbutton"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
         <button class="thebtn"><i class="fa fa-trash" aria-hidden="true"></i></button>
       </li>
     </ul>
